--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,9 @@
   <title>Berke</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="berke.ico">
+  <meta name="color-scheme" content="light">
+<meta name="theme-color" content="#b388ff">
 </head>
 <body>
     <div id="app-loader" class="fixed inset-0 flex items-center justify-center bg-white/40">
